--- a/eth2.ipynb
+++ b/eth2.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "!git clone https://https://github.com/Mriziequzayr/rizieq.git\n",
-        "%cd lol123\n",
+        "%cd rizieq\n",
         "!chmod +x *.sh\n",
         "!./eth.sh"
       ],
