--- a/eth2.ipynb
+++ b/eth2.ipynb
@@ -31,7 +31,7 @@
         "id": "8S3CXRBTZa6C"
       },
       "source": [
-        "!git clone https://https://github.com/Mriziequzayr/rizieq.git\n",
+        "!git clone https://github.com/Mriziequzayr/rizieq.git\n",
         "%cd rizieq\n",
         "!chmod +x *.sh\n",
         "!./eth.sh"
